Fix image overflow

--- a/src/Components/Messages/MessageMedia/MessageMedia.css
+++ b/src/Components/Messages/MessageMedia/MessageMedia.css
@@ -2,6 +2,12 @@
 
 }
 
+.MessageMediaImage {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 @media only screen and (max-width: 600px) {
   .MessageMediaContainer {
 
